[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/StoreDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/icons collection .png" type="Texture" id=2]
[ext_resource path="res://resources/styles/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/greenRectNormal.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/greenRectTapped.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/redRectNormal.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 176, 128, 144 )

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.294118, 0.717647, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.92549, 0.92549, 0.92549, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.898039, 0.898039, 0.898039, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StoreDisplay" type="Panel"]
margin_right = 444.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 124 )
mouse_filter = 1
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -58.0
margin_right = 72.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 64 )
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="Level" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = 12.0
margin_right = 67.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "99"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 76.0
margin_top = 5.0
margin_right = -14.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_right = 354.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
mouse_filter = 1
size_flags_vertical = 1
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 6 )
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 354.0
margin_bottom = 115.0
size_flags_vertical = 3

[node name="Buy" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="PriceLabel" type="Label" parent="VBoxContainer/HBoxContainer/Buy"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Buy"
align = 1
valign = 1

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 179.0
margin_right = 354.0
margin_bottom = 67.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0.486275, 0.486275, 0.486275, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "00:00:00"
align = 1
valign = 1

[node name="ShopName" type="Label" parent="."]
margin_left = 84.0
margin_top = 2.0
margin_right = 249.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Shop"

[node name="ShopProduce" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -236.0
margin_top = 5.0
margin_right = -25.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.694118, 0.694118, 0.694118, 1 )
custom_fonts/font = ExtResource( 3 )
text = "$99999"
align = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Time" to="." method="_on_Time_gui_input"]
